--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Authors@R:
     person(given = "Ayush",
            family = "Patel",
            role = c("aut", "cre"),
-           email = "ayush.ap58@gmail.com"))
+           email = "ayush.ap58@gmail.com")
 Description: Using this to learn how to build packages, does nothing.
 License: MIT + file LICENSE
 Encoding: UTF-8
